fix: popup scrollbars with 125% scale (#1384)
* fix: popup scrollbars with 125% scale

* chore: changeset

* fix: min size

* fix: rollback home page inline changes

--- a/packages/talisman-ui/src/styles/styles.css
+++ b/packages/talisman-ui/src/styles/styles.css
@@ -14,13 +14,6 @@
     @apply leading-base text-body bg-black-primary font-sans text-base antialiased;
   }
 
-  html,
-  body {
-    /* this ensures we can apply clean borders to the popup */
-    /* might want to move this to popup class or html file */
-    @apply m-0 overflow-hidden p-0;
-  }
-
   /* hides the content of the page while fonts are preloading (using webfontloader) */
   #root.wf-loading {
     @apply hidden;
